[idea] run all tests on hudson