@@ -4,6 +4,23 @@ buildscript {
 	}
 }
 
+def ideaTestProjects = [
+	project('org.eclipse.xtext.xbase.idea.tests'),
+	project('org.eclipse.xtext.core.idea.tests'),
+	project('org.eclipse.xtext.idea.sdomain.idea.tests'),
+	project('org.eclipse.xtend.idea.tests'),
+	project('org.eclipse.xtext.idea.common.types.tests')
+]
+
+def ideaPluginProjects = [
+	project('org.eclipse.xtext.idea'),
+	project('org.eclipse.xtext.xtext.idea'),
+	project('org.eclipse.xtext.xbase.idea'),
+	project('org.eclipse.xtext.idea.sdomain.idea'),
+	project('org.eclipse.xtext.idea.example.entities.idea'),
+	project('org.eclipse.xtend.idea')
+]
+
 apply plugin: 'org.xtext.idea-repository'
 apply plugin: 'org.xtext.idea-aggregator'
 ideaRepository.rootUrl = 'https://hudson.eclipse.org/xtext/job/xtext-intellij/lastSuccessfulBuild/artifact/git-repo/intellij'
@@ -30,15 +47,18 @@ subprojects {
 	}
 }
 
-def intellijPluginProjects = [
-	project('org.eclipse.xtext.idea'),
-	project('org.eclipse.xtext.xtext.idea'),
-	project('org.eclipse.xtext.xbase.idea'),
-	project('org.eclipse.xtext.idea.sdomain.idea'),
-	project('org.eclipse.xtext.idea.example.entities.idea'),
-	project('org.eclipse.xtend.idea')
-]
+configure(ideaTestProjects) {
+	sourceSets.test.java.srcDirs ('src', 'src-gen', 'xtend-gen', 'tests')
+	sourceSets.main.java.srcDirs = []
+	dependencies {
+		testCompile project(':intellij:org.eclipse.xtext.idea.tests')
+	}
+	test {
+		minHeapSize = "1024m"
+		jvmArgs '-XX:MaxPermSize=256m'
+	}
+}
 
-configure(intellijPluginProjects) {
+configure(ideaPluginProjects) {
 	apply plugin: 'org.xtext.idea-plugin'
 }
